updated jupyter notebook

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup as bs\n",
+    "from splinter import Browser\n",
+    "from selenium import webdriver"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
